--- a/devops/elk.html
+++ b/devops/elk.html
@@ -228,7 +228,7 @@ xpack.security.transport.ssl:
                         Habilitar elasticsearch:
                     </div>
                     <div class="comandos">
-                        <input type="text" class="text" value="sudo systemctl enable elasticsearch && sudo systemctl start elasticsearch" oninput="ajustarAncho(this)">
+                        <input type="text" class="text" value="sudo systemctl start elasticsearch" oninput="ajustarAncho(this)">
                         <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
