--- a/devops/elk.html
+++ b/devops/elk.html
@@ -713,8 +713,8 @@ output {
                         <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
-                <p>Al mandar la salida con formato de timestamp Elasticsearch debe crear un índice con el nombre .ds-logs-syslog-2025.03.09-2025.03.09-000001. Este nombre sugiere que estás utilizando Data Streams en Elasticsearch, lo cual es común si has habilitado ILM (Index Lifecycle Management) o Data Streams en tu configuración.</p>
-                <p>Un Data Stream es una abstracción en Elasticsearch que permite manejar índices basados en el tiempo (time-series) de manera más eficiente. En lugar de crear un índice directamente (como logs-syslog-2025.03.09), Elasticsearch crea un índice con un nombre generado automáticamente (por ejemplo, .ds-logs-syslog-2025.03.09-2025.03.09-000001).</p>
+                <p>Elasticsearch puede crear un índice Data Streams en Elasticsearch, lo cual es común si has habilitado ILM (Index Lifecycle Management) o Data Streams en tu configuración.</p>
+                <p>Un Data Stream es una abstracción en Elasticsearch que permite manejar índices basados en el tiempo (time-series) de manera más eficiente.</p>
                 <div class="archivo">
 output {
     elasticsearch {
