--- a/devops/elk.html
+++ b/devops/elk.html
@@ -999,7 +999,7 @@ output {
                 <p>Luego, en Kibana:</p>
                 <ol>
                     <li>Ve a "Stack Management" → "Index Patterns".</li>
-                    <li>Crea un patrón de índice para logs-syslog-*.</li>
+                    <li>Crea un patrón de índice para logs*.</li>
                     <li>Visualiza los datos en "Discover".</li>
                 </ol>
                 <div class="blog-image-grande">
