--- a/devops/elk.html
+++ b/devops/elk.html
@@ -742,6 +742,8 @@ output {
                 </div>
                 <p>Logstash puede crear un índice para Data Streams en Elasticsearch, lo cual es común si has habilitado ILM (Index Lifecycle Management) o Data Streams en tu configuración.</p>
                 <p>Un Data Stream es una abstracción en Elasticsearch que permite manejar índices basados en el tiempo (time-series) de manera más eficiente.</p>
+                <p>Para configurar un data stream en Logstash, necesitarás configurar un pipeline de Logstash que pueda consumir datos desde una fuente (como un archivo, un servidor de base de datos o un servicio) y luego enviarlos a un destino (como Elasticsearch).</p>
+                <p>Para esto es necesario específicarlo en el output del archivo de configuración de Logstash: </p>
                 <div class="archivo">
 output {
     elasticsearch {
