--- a/devops.html
+++ b/devops.html
@@ -69,6 +69,10 @@
             <img src="media/imagen38.svg" alt="ELK Stack" class="article-image">
             <h2><a href="devops/elk.html">ELK Stack</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen38.svg" alt="Kafka" class="article-image">
+            <h2><a href="devops/kafka.html">Kafka</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen38.svg" alt="En proceso" class="article-image">
