--- a/electronica.html
+++ b/electronica.html
@@ -68,7 +68,11 @@
         <div class="article-section">
             <img src="media/imagen1.png" alt="Transistor" class="article-image">
             <h2><a href="electronica/transistor.html">Transistor</a></h2>
-        </div> 
+        </div>
+        <div class="article-section">
+            <img src="media/imagen1.png" alt="OP-AMP" class="article-image">
+            <h2><a href="electronica/opamp.html">OP-AMP</a></h2>
+        </div>  
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen1.png" alt="En proceso" class="article-image">
