--- a/electronica.html
+++ b/electronica.html
@@ -72,7 +72,11 @@
         <div class="article-section">
             <img src="media/imagen1.png" alt="OP-AMP" class="article-image">
             <h2><a href="electronica/opamp.html">OP-AMP</a></h2>
-        </div>  
+        </div>
+        <div class="article-section">
+            <img src="media/imagen1.png" alt="Electrónica de Potencia" class="article-image">
+            <h2><a href="electronica/potencia.html">Electrónica de Potencia</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen1.png" alt="En proceso" class="article-image">
