--- a/electronica.html
+++ b/electronica.html
@@ -77,6 +77,10 @@
             <img src="media/imagen1.png" alt="Electrónica de Potencia" class="article-image">
             <h2><a href="electronica/potencia.html">Electrónica de Potencia</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen1.png" alt="Compuertas Lógicas" class="article-image">
+            <h2><a href="electronica/compuertas.html">Compuertas Lógicas</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen1.png" alt="En proceso" class="article-image">
