--- a/electronica.html
+++ b/electronica.html
@@ -81,6 +81,10 @@
             <img src="media/imagen1.png" alt="Compuertas Lógicas" class="article-image">
             <h2><a href="electronica/compuertas.html">Compuertas Lógicas</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen1.png" alt="Sistemas Digitales" class="article-image">
+            <h2><a href="electronica/digital.html">Sistemas Digitales</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen1.png" alt="En proceso" class="article-image">
